# hotelbot-sample

./: config.py  dubai_hotels_synthetic_daily_2y_enriched.csv  hybrid_qa.py  memory_store.py  pyproject.toml  rag_core.py  requirements.txt  sql_core.py  telegram_bot.py
chroma_db/: chroma.sqlite3
chroma_db/c4ba6fec-c22e-487f-9860-d3541c9cc60a/: index_metadata.pickle
